Google Wave Java Robot Client Library 04/01/2010.
git-svn-id: http://wave-robot-java-client.googlecode.com/svn/trunk@18 3ea8f464-4a4f-11de-b25d-9f9778916a3c